web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-generator-inside-loop/output.txt
[SyntaxError]: Async functions can only be declared at the top level or inside a block. (1,17)
1|while (1) async function *foo(){}
 |               ^
[SyntaxError]: Generator functions can only be declared at the top level or inside a block. (1,17)
1|while (1) async function *foo(){}
 |               ^
[SyntaxError]: In non-strict mode code, functions can only be declared at top level, inside a block, or as the body of an if statement. (1,17)
1|while (1) async function *foo(){}
 |               ^
